Fixed BLM spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,8 @@ h1 { font-size: 3em; }
 
 p, a, li {
     font-weight: 500;
-    margin: 0.25em 0;
+    margin: 0;
+    line-height: 1.5em;
     .subText { color: #555; }
 }
 
